using MiniGitHub.Data.Rows;

namespace MiniGitHub.Data.DAOs;

public interface ICommentDao : IDao<CommentRow> {
}