namespace MiniGitHub.Domain.Entities;

public interface IIdentifiableObject {
    long Id {get;}
}